# ansible-role-gearman

./: .gitreview  .zuul.yaml  README.md  README.rst  bindep.txt  setup.cfg
defaults/: main.yaml
doc/source/: conf.py
meta/: main.yml
tasks/: config.yaml  install.yaml  main.yaml  pre.yaml  service.yaml
tasks/install/: git.yaml  pip.yaml
templates/etc/gear/: gearman-logging.conf  logging.conf
templates/etc/gear/ssl/: root-ca.pem  server.key  server.pem
templates/etc/systemd/system/: gear.service
tests/: collect-logs.yaml  test.yaml
tests/playbooks/: run.yaml
vars/: ubuntu-xenial.yaml
